tdf#108493 DOCX import: fix hanging indent of lists

when its value comes from the numbering style, but
the left indentation is overwritten by paragraph
settings. The problem caused by that these settings
are not independent in Writer core.

Change-Id: I5d6759bb215b82dfcaa5cbd3e191ac7ea8a8bb00
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/93478
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>